Fix contrast-ratio issues

--- a/src/footer/Footer.css
+++ b/src/footer/Footer.css
@@ -19,7 +19,7 @@ footer {
 a,
 a:visited,
 a:hover {
-  color: #008aff;
+  color: #005aff;
 }
 
 .footer-link {
